fix css on smaller screens & align elements

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -72,7 +72,8 @@
 }
 
 .footer {
-  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 @keyframes fadeIn {
