--- a/styles/coffee-store.module.css
+++ b/styles/coffee-store.module.css
@@ -8,7 +8,7 @@
 .container {
   display: grid;
   grid-template-columns: 1fr;
-  margin-left: 10%;
+  margin-left: 5%;
   margin-top: -5rem;
 }
 
@@ -40,8 +40,4 @@
   padding: .5rem;
   border-radius: 5px;
   cursor: pointer;
-}
-
-@media screen and (min-width: 480px) {
-
 }
